--- a/Week_2/Web_Lesson2/InClassProgramming/RWD Task/input/input.html
+++ b/Week_2/Web_Lesson2/InClassProgramming/RWD Task/input/input.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
 
+
         ul {
             list-style-type: none;
             margin: 0;
             padding-top:7%;
-            width: 25%;
-            background-color: #5bc0de;
+            width:20%;
             position: fixed;
             height: 100%;
             overflow: auto;
@@ -30,33 +30,31 @@
 <body>
 
 <ul>
-    <li>  <div>
-        <img src="bean.jpg" class="img-thumbnail" alt="Cinque Terre">
-    </div></li>
+    <li>
+        <img src="bean.jpg" class="img-thumbnail" alt="my_photo">
+    </li>
     <li><a href="#EducationQualifications">Education Qualifications</a></li>
     <li><a href="#Skills">Skills</a></li>
     <li><a href="#ProfessionalSkills">Professional Skills</a></li>
     <li><a href="#ContactDetais">Contact Details</a></li>
 </ul>
-
-<div style="margin-left:25%;padding-left:2%;padding-top:2%;height:200%;">
-    <div style="padding-bottom:10%;">
+<div style="margin-left:25%;padding-left:2%;height: 80%;">
+    <div style="padding-bottom:12%;">
 
         <div style="float: left;">
             <div>
-                <img src="bean.jpg" class="img-thumbnail" alt="Cinque Terre">
+                <img src="bean.jpg" class="img-responsive" alt="Cinque Terre">
             </div>
         </div>
 
-        <div style="float: right;">
+        <div style="float: right;padding-top: 2%;padding-right: 3%;">
             <h1>Mr. Rowan Atkinson</h1>
             <h4>Masters in Computer Science</h4>
         </div>
     </div>
-    <br>
-    <div style="padding-top: 3%;">
-        <img src="Image.png" class="img-responsive">
-    </div>
+    <hr>
+    <img src="image.jpeg" alt="fetching image" class="img-responsive">
+
     <div>
         <h2>Featured Work </h2>
     </div>
