--- a/Week_2/Web_Lesson2/InClassProgramming/RWD Task/input/input.html
+++ b/Week_2/Web_Lesson2/InClassProgramming/RWD Task/input/input.html
@@ -33,10 +33,10 @@
     <li>
         <img src="bean.jpg" class="img-thumbnail" alt="my_photo">
     </li>
-    <li><a href="#EducationQualifications">Education Qualifications</a></li>
-    <li><a href="#Skills">Skills</a></li>
-    <li><a href="#ProfessionalSkills">Professional Skills</a></li>
-    <li><a href="#ContactDetais">Contact Details</a></li>
+    <li><a href="#EducationQualifications"><span class="glyphicon glyphicon-book"></span> Education Qualifications</a></li>
+    <li><a href="#Skills"><span class="glyphicon glyphicon-briefcase"></span> Skills</a></li>
+    <li><a href="#ProfessionalSkills"><span class="glyphicon glyphicon-thumbs-up"></span>Professional Skills</a></li>
+    <li><a href="#ContactDetais"><span class="glyphicon glyphicon-phone"></span> Contact Details</a></li>
 </ul>
 <div style="margin-left:25%;padding-left:2%;height: 80%;">
     <div style="padding-bottom:12%;">
