github user fetcher code
uploads

--- a/ICP_assignments/ColorPicker/index.html
+++ b/ICP_assignments/ColorPicker/index.html
@@ -55,7 +55,26 @@
         </div>
     </div>
 
+
 </div>
 
+<div id="c">
+    <h1>Color picker</h1>
+    <input id="color" type="text" value="RED" />
+    <button id="add-to-favorite">Add to favorites</button>
+    <div class="r">
+        <div class="cl">
+            <div class="preview">
+            </div>
+        </div>
+        <div class="cl">
+            <div id="colors">
+
+            </div>
+        </div>
+        <br/>
+        <div class="color-code"></div>
+    </div>
+</div>
 </body>
 </html>
